Cleaning up command line Jackpot, trying to fix build and support for JDK 10 and other cleanup.