@@ -22,5 +22,49 @@
 <project name="cmdline" basedir=".">
     <description>Builds the module suite cmdline.</description>
     <import file="nbproject/build-impl.xml"/>
-    <import file="../suite-common.xml"/>
+<!--    <import file="../suite-common.xml"/>-->
+
+    <!-- copied (and adjusted) from suite.xml: -->
+    <target name="test" depends="build" description="Runs tests for all modules in the suite.">
+        <sortsuitemodules unsortedmodules="${modules}" sortedmodulesproperty="modules.test.sorted" sorttests="true"/>
+        <subant target="test" buildpath="${modules.test.sorted}" inheritrefs="false" inheritall="false">
+            <property name="cluster.path.evaluated" value="${cluster.path.evaluated}"/> <!-- Just for speed of pre-7.0 projects -->
+            <property name="harness.taskdefs.done" value="${harness.taskdefs.done}"/> <!-- optimization -->
+        </subant>
+    </target>
+
+    <target name="build-source-dist">
+        <mkdir dir="build" />
+        <zip file="build/incubating-apache-netbeans-jackpot-${version}.zip">
+            <zipfileset dir="." />
+            <zipfileset dir=".." includes="DISCLAIMER" fullpath="DISCLAIMER"/>
+            <zipfileset dir=".." includes="LICENSE" fullpath="LICENSE"/>
+            <zipfileset dir=".." includes="NOTICE" fullpath="NOTICE"/>
+        </zip>
+    </target>
+
+    <target name="build-and-test">
+        <ant dir="${basedir}" inheritAll="false" inheritRefs="false">
+            <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
+            <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
+            <property name="test.run.args" value="--add-exports=jdk.javadoc/com.sun.tools.javadoc.main=ALL-UNNAMED" />
+            <property name="test.nbjdk.home" value="${JDK10}" />
+            <target name="clean" />
+            <target name="build" />
+            <target name="test" />
+        </ant>
+        <ant dir="${basedir}/tool" target="create-standalone-tool" inheritAll="false" inheritRefs="false">
+            <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
+            <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
+            <property name="continue.after.failing.tests" value="false" />
+            <property name="test.run.args" value="--add-exports=jdk.javadoc/com.sun.tools.javadoc.main=ALL-UNNAMED" />
+            <property name="test.nbjdk.home" value="${JDK10}" />
+        </ant>
+        <property environment="env"/>
+        <exec executable="build/test/scripted/run" dir="tool" failonerror="true">
+            <env key="JAVA_HOME" path="${JDK10}" />
+            <env key="PATH" path="${JDK10}/bin:${env.PATH}" />
+        </exec>
+    </target>
+
 </project>
